<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".modules.search.result.ResultFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background"
        android:orientation="vertical">
        <include android:id="@+id/headertitle"
            layout="@layout/header"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/page"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
            <Button
                android:id="@+id/choosePage"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/choose"/>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/a_z" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/rating" />
                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/update1" />

                <RadioButton
                    android:id="@+id/radio4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/create" />
            </RadioGroup>

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/resultRecycler"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"/>
</FrameLayout>