<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.search.SearchFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/cardview_dark_background"
        android:layout_height="match_parent">
        <include layout="@layout/header"
            android:id="@+id/headertitle"/>
        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/title"
            app:layout_constraintTop_toBottomOf="@id/headertitle"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <EditText
            android:id="@+id/edtTitle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toRightOf="@id/txtTitle"
            app:layout_constraintTop_toTopOf="@id/txtTitle"
            app:layout_constraintBottom_toBottomOf="@id/txtTitle"/>
        <TextView
            android:id="@+id/txtAuthorArtist"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:text="@string/author_artist"
            app:layout_constraintTop_toBottomOf="@id/edtTitle"
            app:layout_constraintLeft_toLeftOf="@id/txtTitle"/>
        <EditText
            android:id="@+id/edtAuthorArtist"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toRightOf="@id/txtAuthorArtist"
            app:layout_constraintTop_toTopOf="@id/txtAuthorArtist"
            app:layout_constraintBottom_toBottomOf="@id/txtAuthorArtist"/>
        <TextView
            android:id="@+id/txtStatuss"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:text="@string/status"
            app:layout_constraintTop_toBottomOf="@id/edtAuthorArtist"
            app:layout_constraintLeft_toLeftOf="@id/txtAuthorArtist"/>
        <Spinner
            android:id="@+id/spinnerStatus"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toRightOf="@id/txtStatuss"
            app:layout_constraintTop_toTopOf="@id/txtStatuss"
            app:layout_constraintBottom_toBottomOf="@id/txtStatuss"
            />
        <TextView
            android:id="@+id/txtGenres"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:text="@string/genre"
            app:layout_constraintTop_toBottomOf="@id/txtRelease"
            app:layout_constraintLeft_toLeftOf="@id/txtRelease"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="#353535"
            android:id="@+id/genreRecycler"
            android:layout_marginTop="20dp"
            android:paddingLeft="15dp"
            app:layout_constraintTop_toBottomOf="@id/txtGenres"
            />
        <Button
            android:id="@+id/btnSearch"
            android:text="@string/search"
            app:layout_constraintTop_toBottomOf="@id/genreRecycler"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txtRelease"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:text="@string/release"
            app:layout_constraintTop_toBottomOf="@id/txtStatuss"
            app:layout_constraintLeft_toLeftOf="@id/txtStatuss"/>
        <Spinner
            android:id="@+id/spinnerRelease"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toRightOf="@id/txtRelease"
            app:layout_constraintTop_toTopOf="@id/txtRelease"
            app:layout_constraintBottom_toBottomOf="@id/txtRelease"
            />
        <ProgressBar
            app:layout_constraintTop_toTopOf="@id/genreRecycler"
            app:layout_constraintBottom_toBottomOf="@id/genreRecycler"
            app:layout_constraintRight_toRightOf="@id/genreRecycler"
            app:layout_constraintLeft_toLeftOf="@id/genreRecycler"
            android:id="@+id/progress_circular"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>