<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".modules.mangadetail.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background"
        android:orientation="vertical">

        <include
            android:id="@+id/header_title"
            layout="@layout/header" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="130dp"
                    android:layout_height="165dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_image"
                    android:padding="5dp"
                    android:scaleType="fitXY"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RatingBar
                    android:id="@+id/ratingbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:numStars="5"
                    android:stepSize="0.5"
                    app:layout_constraintLeft_toRightOf="@id/image"
                    app:layout_constraintTop_toTopOf="@id/image" />

                <TextView
                    android:id="@+id/txtAuthor"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/author_s"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@id/txtStatus"
                    app:layout_constraintTop_toBottomOf="@id/txtStatus" />

                <TextView
                    android:id="@+id/txtArtist"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/artist_s"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@id/image"
                    app:layout_constraintTop_toBottomOf="@id/author" />

                <TextView
                    android:id="@+id/txtGenre"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/genre_s"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@id/txtArtist"
                    app:layout_constraintTop_toBottomOf="@id/artist" />

                <TextView
                    android:id="@+id/txtStatus"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/status"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@id/txtRating"
                    app:layout_constraintTop_toBottomOf="@id/rating" />

                <TextView
                    android:id="@+id/txtAlternative"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/alternative"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@id/txtGenre"
                    app:layout_constraintTop_toBottomOf="@id/genre" />

                <TextView
                    android:id="@+id/txtRating"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/rating"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@id/ratingbar"
                    app:layout_constraintTop_toBottomOf="@id/ratingbar" />


                <TextView
                    android:id="@+id/author"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/txtAuthor"
                    app:layout_constraintTop_toTopOf="@id/txtAuthor" />

                <TextView
                    android:id="@+id/artist"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/txtArtist"
                    app:layout_constraintTop_toTopOf="@id/txtArtist" />

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/txtGenre"
                    app:layout_constraintTop_toTopOf="@id/txtGenre" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/txtStatus"
                    app:layout_constraintTop_toTopOf="@id/txtStatus" />

                <TextView
                    android:id="@+id/alternative"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text=""
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/txtAlternative"
                    app:layout_constraintTop_toTopOf="@id/txtAlternative" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/txtRating"
                    app:layout_constraintTop_toTopOf="@id/txtRating" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#5A6777"
                app:tabIndicatorColor="#FB9B00"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="#C1C1C1" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</FrameLayout>